# testsuite

./: CMakeLists.txt  communication.cpp  custom_tester.cpp  custom_tester.h  iperf.cpp  main.cpp  metrics.h  stress.cpp  stress.h  structures.h  test_control_client.cpp  test_control_common.h  test_control_server.h  test_description.cpp  test_description.h  test_scenario.cpp  test_scenario.h
config/creator/: .gitignore  creator.py  parameters.py  xmlcreator.py
config/creator/support/: pairs.txt  xmlcreator.py
config/files/general/: client_template.xml  server_template.xml
config/files/general/client/: client_1A_H.xml  client_1A_R.xml  client_1B_H.xml  client_1B_R.xml  client_2A_H.xml  client_2A_R.xml  client_2B_H.xml  client_2B_R.xml  client_3A_H.xml  client_3A_R.xml  client_3B_H.xml  client_3B_R.xml
config/files/general/server/: server_1A_H.xml  server_1A_R.xml  server_1B_H.xml  server_1B_R.xml  server_2A_H.xml  server_2A_R.xml  server_2B_H.xml  server_2B_R.xml  server_3A_H.xml  server_3A_R.xml  server_3B_H.xml  server_3B_R.xml
config/files/master/full/center/: client.xml  server.xml
config/files/master/full/endpoint1/: client.xml  server.xml
config/files/master/full/endpoint2/: client.xml  server.xml
config/files/master/full/endpoint3/: client.xml  server.xml
config/files/master/full/endpoint4/: client.xml  server.xml
config/files/master/reduced/center/: client.xml  server.xml
config/files/master/reduced/endpoint1/: client.xml  server.xml
config/files/master/reduced/endpoint2/: client.xml  server.xml
config/files/master/reduced/endpoint3/: client.xml  server.xml
config/files/master/reduced/endpoint4/: client.xml  server.xml
config/files/performance/ihwk_1/client/: client_1A_H.xml  client_1A_R.xml  client_1B_H.xml  client_1B_R.xml  client_2A_H.xml  client_2A_R.xml  (+10 more)
src/: CMakeLists.txt  communication.cpp  communication.h  custom_stressor.cpp  custom_stressor.h  custom_tester.cpp  custom_tester.h  helpers.cpp  helpers.h  iperf.cpp  iperf.h  main.cpp  metrics.cpp  metrics.h  stress.cpp  stress.h  test_control.cpp  test_control.h  test_control_client.cpp  test_control_client.h  test_control_common.cpp  test_control_server.cpp  test_control_server.h  test_description.cpp  test_description.h  test_results.cpp  test_results.h  test_scenario.cpp  test_scenario.h  testsuite.cpp
src/lib/uce/: uce.h  uce_client.cpp  uce_server.cpp  uce_support.cpp  uce_support.h
(+346 files in other folders)
